tests/paczka1/fuzzy1/37493614.err
Error in line 3: WnFPv A8 22,4
Error in line 1: 29emMNF1P A957 78,3
Error in line 14: rjjVj1yC A957 41,5
Error in line 20: Zs7C6RijPD A258 62,7
Error in line 21: odFrXgZdRj A258 40,0
Error in line 37: Xc7SAtg A957 180,4
